bizinikiwi/pezframe/support/test/tests/pezpallet_ui/storage_result_query_no_defined_pezpallet_error.stderr
error: Invalid pezpallet::storage, unexpected number of path segments for the generics in ResultQuery, expected a path with at least 2 segments, found 1
  --> tests/pezpallet_ui/storage_result_query_no_defined_pezpallet_error.rs:29:56
   |
29 |     type Foo<T: Config> = StorageValue<_, u8, ResultQuery<NonExistentValue>>;
   |                                                           ^^^^^^^^^^^^^^^^
